nit: minor fix in titles

--- a/notebooks/part1-tabular/Mid_Project_tabular_RL_Minigrid_2024.ipynb
+++ b/notebooks/part1-tabular/Mid_Project_tabular_RL_Minigrid_2024.ipynb
@@ -873,7 +873,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Q-Learning algorithm"
+        "# Q-Learning Algorithm"
       ]
     },
     {
@@ -1832,7 +1832,7 @@
         "id": "X3Qs2iJl6BCg"
       },
       "source": [
-        "# RandomKeyMEnv_10"
+        "# Part 2: Key Environment"
       ]
     },
     {
