nit: minor comment update

--- a/notebooks/part2-deep/empty/RL2024_FinalProject_ENV1_EmptyEnv.ipynb
+++ b/notebooks/part2-deep/empty/RL2024_FinalProject_ENV1_EmptyEnv.ipynb
@@ -299,9 +299,9 @@
         "        return super().reset(**kwargs)\n",
         "    \n",
         "    # Necessary functions for environment customization:\n",
-        "    # - get_position and get_goal_pos: These functions help us determine whether the environment has been solved. \n",
-        "    #   Additionally, get_goal_pos aids in gathering metrics related to the agent's performance throughout the training process.\n",
-        "    # - is_wall_front_pos: This function assesses whether forward movement is feasible for the agent at a specific state.\n",
+        "    # - get_position and get_goal_pos: These functions help us determine whether the environment has been solved\n",
+        "    #   Additionally, get_goal_pos aids in gathering metrics related to the agent's performance throughout the training process\n",
+        "    # - is_wall_front_pos: This function assesses whether forward movement is feasible for the agent at the specific state\n",
         "    \n",
         "    def get_position(self):\n",
         "        return self.unwrapped.agent_pos\n",
