Update empty env with online link

--- a/notebooks/part2-deep/empty/RL2024_FinalProject_ENV1_EmptyEnv.ipynb
+++ b/notebooks/part2-deep/empty/RL2024_FinalProject_ENV1_EmptyEnv.ipynb
@@ -19,6 +19,8 @@
         "Student 2:\n",
         "<br>\n",
         "\n",
+        "**Note:** This notebook is available both in the project git and online via [this link](https://drive.google.com/file/d/10lDJ2Wl6oVv-k4HSw8MmpZvPdPQh_2Ug/view?usp=sharing). In the online version, the episode count was set to 80 as it is sufficient for solving this environment and still be within the hardware limitations of Google Colab. \n",
+        "\n",
         "<br>\n",
         "\n",
         "<img src=\"https://raw.githubusercontent.com/Farama-Foundation/Minigrid/master/minigrid-text.png\">\n",
