commit notebooks updates

--- a/notebooks/PartA-Q-Learning/experiments/step_reward.ipynb
+++ b/notebooks/PartA-Q-Learning/experiments/step_reward.ipynb
@@ -138,7 +138,8 @@
         "import random\n",
         "import matplotlib.pyplot as plt\n",
         "from enum import Enum\n",
-        "from abc import ABC, abstractmethod"
+        "from abc import ABC, abstractmethod\n",
+        "from tqdm import tqdm"
       ]
     },
     {
@@ -1235,31 +1236,55 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def evaluate_policy(env, policy, steps_cutoff):\n",
+        "def evaluate_policy(env, policy, steps_cutoff, trials=100, print_results=False):\n",
         "    '''\n",
-        "    Evaluates a given policy on the given env for a limited steps_cutoff number of steps or until the environment is solved.\n",
+        "    Evaluates a given policy on a specified environment. The evaluation is performed over a specified number of trials,\n",
+        "    with each trial running for a maximum of steps_cutoff steps or until the environment signals a terminal state (solved).\n",
+        "    This function calculates and returns the average number of steps taken to reach the terminal state and the proportion\n",
+        "    of trials in which the environment was solved.\n",
+        "\n",
+        "    :param env: The environment on which the policy is evaluated.\n",
+        "    :param policy: The policy to be evaluated.\n",
+        "    :param steps_cutoff: The maximum number of steps to run each trial before stopping.\n",
+        "    :param trials: Optional; The number of trials to run the evaluation. Defaults to 100.\n",
+        "    :param print_results: Optional; If True, prints a summary of the evaluation results. Defaults to False.\n",
         "    :return: A tuple containing two values:\n",
-        "        - steps_count: The number of steps taken during the evaluation, capped at steps_cutoff.\n",
-        "        - done: A boolean indicating whether the environment was solved during the evaluation.\n",
+        "        - avg_steps_count: The average number of steps taken across all trials.\n",
+        "        - avg_done_episodes: The proportion of trials where the environment was solved, expressed as a fraction of 1.\n",
         "    :rtype: tuple\n",
         "    '''\n",
-        "    state = env.reset()\n",
-        "    done = False\n",
-        "    steps_count = 0\n",
+        "    total_steps_count = 0\n",
+        "    total_done_episodes = 0\n",
         "\n",
-        "    while not done and steps_count < steps_cutoff:\n",
-        "        action = policy(state)\n",
-        "        state, reward, done = env.step(action)\n",
-        "        steps_count += 1\n",
+        "    for i in tqdm(range(trials), desc=\"Evaluation Progress\"):\n",
+        "        state = env.reset()\n",
+        "        done = False\n",
+        "        steps_count = 0\n",
         "\n",
-        "    return steps_count, done\n",
+        "        while not done and steps_count < steps_cutoff:\n",
+        "            action = policy(state)\n",
+        "            state, reward, done = env.step(action)\n",
+        "            steps_count += 1\n",
+        "\n",
+        "        total_steps_count += steps_count\n",
+        "        total_done_episodes += int(done)\n",
+        "\n",
+        "    avg_steps_count = total_steps_count / trials\n",
+        "    avg_done_episodes = total_done_episodes / trials\n",
+        "\n",
+        "    if print_results:\n",
+        "        print(f\"Policy Evaluation Summary (over {trials} trials):\\n\"\n",
+        "        f\"- Average Steps Taken: {avg_steps_count:.2f}\\n\"\n",
+        "        f\"- Environment Solved in {avg_done_episodes * 100:.2f}% of Trials\")\n",
+        "\n",
+        "    return avg_steps_count, avg_done_episodes\n",
         "\n",
         "def run_experiment(env, env_params, algorithm, algorithm_params, tested_parameter, tested_values):\n",
         "    env_params_cpy = env_params.copy()\n",
         "    algorithm_params_cpy = algorithm_params.copy()\n",
         "\n",
         "    train_results = pd.DataFrame(columns=[tested_parameter, 'done_episodes_count', 'total_episodes_count', 'total_steps_avg'])\n",
-        "    test_results = pd.DataFrame(columns=[tested_parameter, 'solved', 'steps_count'])\n",
+        "    test_results = pd.DataFrame(columns=[tested_parameter, 'avg_steps_count', 'done_episodes_%'])\n",
         "    train_logs_dict = {}\n",
         "\n",
         "    # Running test for parameter_value\n",
@@ -1309,9 +1334,9 @@
         "        # Step 2: Test #\n",
         "        ################\n",
         "        print('Start testing')\n",
-        "        steps_count, done = evaluate_policy(env, policy, steps_cutoff=test_steps_cutoff)\n",
+        "        avg_steps_count, avg_done_episodes = evaluate_policy(env, policy, steps_cutoff=test_steps_cutoff)\n",
         "\n",
-        "        test_result_entry = {tested_parameter: parameter_value, 'solved': done, 'steps_count': steps_count}\n",
+        "        test_result_entry = {tested_parameter: str(parameter_value), 'avg_steps_count': f'{avg_steps_count:.2f}', 'done_episodes_%': f'{avg_done_episodes*100:.2f}%'}\n",
         "        test_results.loc[len(test_results)] = test_result_entry\n",
         "\n",
         "    print(\"Generating report...\")\n",
